--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -3,7 +3,7 @@
 
 
 <center>
-	{% if name!=None %}
+	{% if name %}
 	<h1 style="position: relative;top:360px;">WELCOME TO <span style="color:azure;font-style: italic;font-size:23px;">POLARoID </h1>
 	<h2 style="position:relative;top:360px;">Stat Server</h2>
 	<h2 style="position: relative;top:360px;">Welcome Mr. {{name}}</h2>
