--- a/Server/templates/layout.html
+++ b/Server/templates/layout.html
@@ -18,7 +18,7 @@
   
   </style>
 </head>
-<body>
+<body style="text-align:center">
 	<nav class="navbar navbar-expand-lg navbar-light bg-dark">
   <a class="navbar-brand" href="/blogs">BLogs</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,8 +47,15 @@
     </ul>
   </div>
 </nav>
-{% block content %}
-{% endblock %}
+<div class="container">
+  <div class="row">
+    <div class="col-xl-12">
+      {% block content %}
+      {% endblock %}
+    </div>
+  </div>
+</div>
+
 
 </body>
 </html>
