--- a/Server/templates/register.html
+++ b/Server/templates/register.html
@@ -5,16 +5,23 @@
 	<div style="position: relative;top:200px;">
 	<h1 style="font-family: Roboto"> REGISTER TO OUR ACCOUNT</h1><br><br><hr>
 	<form action="" method="Post" enctype="multipart/form-data">
+		
 		<p>{{form.hidden_tag()}}
-		{{form.username.label}}
-		{{form.username(size=100,placeholder="name")}}<br><br>
-		{{form.email.label}}
-		{{form.email(size=100,placeholder="Email")}}<br><br>
-		{{form.file.label}}
-		{{form.file()}}<br><br>
-		{{form.password.label}}
-		{{form.password(size=100,placeholder="password")}}</p><br><br>
-		<p>{{form.submit()}}</p>
+		<div class="form-group">
+		<label>{{form.username.label}}</label>
+		<p class="form-control-sm">{{form.username(size=100,placeholder="name")}}</p><br><br>
+		</div>
+		<div class="form-group">
+		<label>{{form.email.label}}</label>
+		<p class="form-control-sm">{{form.email(size=100,placeholder="Email")}}</p><br><br>
+		</div>
+		<div class="form-group">
+		<label>{{form.password.label}}</label>
+		<p class="form-control-sm">{{form.password(size=100,placeholder="password")}}</p><br><br>
+		</div>
+		<label>{{form.file.label}}</label>
+		<p class="form-control-sm">{{form.file()}}</p><br><br>
+		<button class="btn btn-primary">{{form.submit()}}</button>
 	</div>
 	 
 {% endblock %}
