--- a/Server/templates/layout.html
+++ b/Server/templates/layout.html
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body style="text-align:center">
-	<nav class="navbar navbar-expand-lg navbar-light bg-dark">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <a class="navbar-brand" href="/blogs">BLogs</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -34,12 +34,6 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/login">Login</a>
-      </li>
-      <li class="nav-item">
-      	        <a class="nav-link" href="/follow">Follow</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/posts">Post</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/logout">Logout</a>
