--- a/Server/templates/yolo.html
+++ b/Server/templates/yolo.html
@@ -1,8 +1,13 @@
 {% extends 'layout.html' %}
 {% block content %}
-<form action="/qwert/{{name}}" method="POST">
+<div class="container">
+        <div class="col-xs-12">
+                <form action="/qwert/{{name}}" method="POST">
                 <lable> item </lable>
-                <input type="text" name="item">
+                <input type="text" name="item" class='form-control'>
                 <button type="submit" class="btn btn-primary">Add item</button>
 </form>  
+        </div>
+</div>
+
 {% endblock %}
