--- a/Server/templates/yolo.html
+++ b/Server/templates/yolo.html
@@ -3,8 +3,15 @@
 <div class="container">
         <div class="col-xs-12">
                 <form action="/qwert/{{name}}" method="POST">
-                <lable> item </lable>
+                <label> item </label>
                 <input type="text" name="item" class='form-control'>
+                <label> Decription </label>
+                <input type='text' name='desc' class='form-control'>
+                <label> Price </label>
+                <input type='text' name='price' class='form-control'>
+                <label> Image Url</label>
+                <input type='text' name='image' class='form-control'>
+
                 <button type="submit" class="btn btn-primary">Add item</button>
 </form>  
         </div>
