--- a/Server/templates/layout.html
+++ b/Server/templates/layout.html
@@ -49,6 +49,20 @@
     </div>
   </div>
 </div>
+<script>
+  function norm(input) {
+  if (input.files && input.files[0]) {
+    var reader = new FileReader();
+    reader.onload = function (e) {
+      $('#blah')
+        .attr('src', e.target.result)
+        .width(150)
+        .height(200);
+    };
+    reader.readAsDataURL(input.files[0]);
+  }
+}
+</script>
 
 
 </body>
