--- a/Server/readData/templates/readData.html
+++ b/Server/readData/templates/readData.html
@@ -17,7 +17,10 @@
                         <h3> Items</h3>
                         <ul>
                         {% for ope in D[list] %}
-                                <li style="color:aqua"> {{ope}}</li>
+                               <label> Item Name </label> <li style="color:aqua"> {{ope[0]}}</li>
+                               <label> Description</label><li style='color:beige'>{{ope[1]}}</li>
+                               <label> Price </label> <li style='color:dodgerblue'>{{ope[2]}}</li>
+                                
                         {% endfor %}
                         </ul>
                         <a class="btn btn-success" href="/yolo/{{list}}">Add Item</a>
