--- a/Server/templates/layout.html
+++ b/Server/templates/layout.html
@@ -15,6 +15,9 @@
     font-family:'Raleway';
 
     }
+    .hide{
+      visibility: hidden;
+    }
   
   </style>
 </head>
@@ -50,18 +53,10 @@
   </div>
 </div>
 <script>
-  function norm(input) {
-  if (input.files && input.files[0]) {
-    var reader = new FileReader();
-    reader.onload = function (e) {
-      $('#blah')
-        .attr('src', e.target.result)
-        .width(150)
-        .height(200);
-    };
-    reader.readAsDataURL(input.files[0]);
-  }
-}
+  document.querySelector('#special').addEventListener('click',()=>{
+      document.querySelector('.Hider').addClass('hide');
+      document.querySelector('.onhide').innerHTML="Wait File is Downloading sorry for that :')"
+  });
 </script>
 
 
