--- a/Server/templates/layout.html
+++ b/Server/templates/layout.html
@@ -13,6 +13,7 @@
     background-image:url('static/se.jpg');
     color:red;
     font-family:'Raleway';
+    display:flexbox;
 
     }
     .hide{
@@ -29,16 +30,20 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav" style="color:azure">
     <ul class="navbar-nav">
+      
       <li class="nav-item active">
         <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="/register">Register</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="/login">Login</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
+        <a class="nav-link" href="/download">Select File For Analysis</a>
+      </li>
+      <li class="nav-item active">
         <a class="nav-link" href="/logout">Logout</a>
       </li>
     </ul>
@@ -52,7 +57,7 @@
     </div>
   </div>
 </div>
-<script>
+<script type='text/javascript'>
   document.querySelector('#special').addEventListener('click',()=>{
       document.querySelector('.Hider').addClass('hide');
       document.querySelector('.onhide').innerHTML="Wait File is Downloading sorry for that :')"
