--- a/Server/templates/readData.html
+++ b/Server/templates/readData.html
@@ -13,7 +13,7 @@
                         <div class="scroll-area">
                         <ul class='list-group list-group-flush' style="list-style-type: none;">
                                 {% for i,j in enumerate(List)  %}
-                                        <li style="color:rgb(0, 255, 42); font-size:21px;font-weight:900px;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;position:relative;right:120px;">{{i+1}}.{{j}}</li>
+                                        <li style="color:rgb(0, 255, 13); font-size:21px;font-weight:900px;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;position:relative;right:120px;">{{i+1}}.{{j}}</li>
                                         <h4 class='items' style="position:relative;right:120px;"> Items</h4>
                                         <div id="lp" style="border-color:rgb(20, 36, 36);border-width:2px;border-style:solid;overflow:scroll; height:100px;">
                                         
@@ -22,7 +22,7 @@
                                         
                                         <div>
                 
-                                              <button type="button" style="color:rgb(0, 251, 255);font-weight:900;"  class='btn bg-transparent' data-toggle="modal" data-target="#exampleModal">
+                                              <button type="button" style="color:rgb(0, 251, 255);font-weight:900;"  id ="delete" class='btn bg-transparent' data-toggle="modal" data-target="#exampleModal">
                                                          {{ope[0]}}<button class="btn btn-danger">Delete Item</button><br>
                                                 </button><br>
 
