--- a/Server/templates/layout.html
+++ b/Server/templates/layout.html
@@ -62,7 +62,9 @@
   </div>
 </div>
 <script type='text/javascript'>
-  
+  document.querySelector('#delete').addEventListener('click',()=>{
+        
+  })
 </script>
 
 
